# acts

./: CMakeLists.txt
Plugins/Cuda/: CMakeLists.txt
Plugins/Cuda/include/Acts/Plugins/Cuda/: Cuda.hpp
Plugins/Cuda/include/Acts/Plugins/Cuda/Seeding/: Kernels.cuh  Seedfinder.hpp  Seedfinder.ipp  Structs.hpp  Work.hpp
Plugins/Cuda/include/Acts/Plugins/Cuda/Utilities/: CpuMatrix.hpp  CpuScalar.hpp  CpuVector.hpp  CudaMatrix.cu  CudaScalar.cu  CudaUtils.cu  CudaVector.cu  MSG.hpp  allocate_device.cpp  allocate_host.cpp  allocate_host.cu
Plugins/Cuda/include/Acts/Plugins/Cuda/Utilities/CUDACore/: CachingDeviceAllocator.h  ScopedSetDevice.h  deviceCount.h  getCachingDeviceAllocator.h  getCachingHostAllocator.h
Plugins/Cuda/src/Seeding/: Kernels.cu
Tests/UnitTests/Plugins/Cuda/Seeding/: CMakeLists.txt  SeedfinderCudaTest.cpp
Tests/UnitTests/Plugins/Cuda/Utilities/: CudaMostSimplifiedTests.cu  CudaTests.cu
